--- a/ProteinModeler/MainPage.xaml
+++ b/ProteinModeler/MainPage.xaml
@@ -60,7 +60,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="30" />
-            <ColumnDefinition Width="300" />
+            <ColumnDefinition Width="400" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="40" />
@@ -125,23 +125,21 @@
             <!--- Grid to hold all information about atoms/molecules in the simulation-->
             <Grid x:Name="SimulationContentsGrid" Grid.Row="0" Background="{StaticResource PanelBackground}" Margin="3" CornerRadius="5">
 
-                <muxc:NavigationView x:Name="NavigationTabsAddSelectView" PaneDisplayMode="Top" SelectionFollowsFocus="Enabled" IsBackButtonVisible="Collapsed" IsSettingsVisible="False" ItemInvoked="NavigationTabsAddSelectView_ItemInvoked"> 
+                <muxc:NavigationView x:Name="NavigationTabsAddSelectView" 
+                                     PaneDisplayMode="Top" 
+                                     SelectionFollowsFocus="Enabled" 
+                                     IsBackButtonVisible="Collapsed" 
+                                     IsSettingsVisible="False" 
+                                     ItemInvoked="NavigationTabsAddSelectView_ItemInvoked"
+                                     Loaded="NavigationTabsAddSelectView_Loaded"> 
                     <muxc:NavigationView.MenuItems>
-                        <muxc:NavigationViewItem Content="Add" Tag="Add" x:Name="NavigationTabAdd" FontSize="14" />
-                        <muxc:NavigationViewItem Content="Select" Tag="Select" x:Name="NavigationTabSelect" FontSize="14" />
-                        <muxc:NavigationViewItem Content="View" Tag="View" x:Name="NavigationTabView" FontSize="14" />
+                        <muxc:NavigationViewItem Content="Add" Tag="AddPage" x:Name="NavigationTabAdd" FontSize="14" />
+                        <muxc:NavigationViewItem Content="Select" Tag="SelectPage" x:Name="NavigationTabSelect" FontSize="14" />
+                        <muxc:NavigationViewItem Content="View" Tag="ViewPage" x:Name="NavigationTabView" FontSize="14" />
                     </muxc:NavigationView.MenuItems>
-                    <Grid>
-                        <Grid x:Name="NavigationGridAdd" Visibility="Visible" Background="Red">
-                        
-                        </Grid>
-                        <Grid x:Name="NavigationGridSelect" Visibility="Collapsed" Background="Green">
-
-                        </Grid>
-                        <Grid x:Name="NavigationGridView" Visibility="Collapsed" Background="Blue">
-
-                        </Grid>
-                    </Grid>
+                    <ScrollViewer>
+                        <Frame x:Name="AddSelectViewContentFrame" Padding="12,0,12,24" IsTabStop="True" NavigationFailed="AddSelectViewContentFrame_NavigationFailed"/>
+                    </ScrollViewer>
                 </muxc:NavigationView>
 
                 <!--
