Added ability to pass ModelerMain* between Pages.

--- a/ProteinModeler/AddPage.xaml
+++ b/ProteinModeler/AddPage.xaml
@@ -6,12 +6,14 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
-    mc:Ignorable="d">
+    mc:Ignorable="d" >
 
     <muxc:NavigationView x:Name="NavigationAdd" 
                          IsSettingsVisible="False" 
                          IsBackButtonVisible="Collapsed" 
-                         PaneDisplayMode="LeftCompact">
+                         PaneDisplayMode="LeftCompact"
+                         Loaded="NavigationAdd_Loaded"
+                         ItemInvoked="NavigationAdd_ItemInvoked">
         <muxc:NavigationView.MenuItems>
             <muxc:NavigationViewItem Icon="Play" Content="Atom" Tag="AddAtom" />
             <muxc:NavigationViewItem Icon="Save" Content="Molecule" Tag="AddMolecule" />
